# PowerText

./: .gitignore  NOTICE  README.md  README_ZH.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/power_text/: __init__.py  local_emoji_source.py  power_text.py
