[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PowerText"
authors = [
  { name="校溯", email="xiaosu-1009@qq.com" }
]
description = "PowerText is a text renderer for Pillow that supports emojis, multiple fonts, automatic line wrapping, and automatic text truncation."
readme = "README.md"
version = "0.6.0"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["text renderer", "emoji", "image-processing", "pillow"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Pillow>=10.0",
    "fonttools>=4.25"
]

[project.optional-dependencies]
full = [
    "emoji~=1.6.3",
    "pilmoji>=2.0"
]

[project.urls]
Homepage = "https://github.com/xiaosuyyds/PowerText/"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["power_text"]

[tool.setuptools.package-data]
PowerBlur = ["*.md"]
